--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_otto">OttoActivity</string>
     <string name="title_activity_weak">WeakActivity</string>
+    <string name="title_activity_here_map">HereMapActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
